# sonic-visualiser

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgsub  .hgsubstate  .hgtags  .travis.yml  CHANGELOG  CITATION  COMPILE_linux.md  COMPILE_macos.md  COMPILE_windows.md  CONTRIBUTING.md  Doxyfile  INSTALL.txt  README  README.OSC  README.md  README_OSC.md  README_githubexport.txt  TRANSLATION.md  acinclude.m4  base.pri  base.pro  bootstrap.sh  bq-files.pri  bq.pro  capnp-regen.pri  config.pri  config.pri.in  configure  configure.ac  convert.pro  meson.build  noconfig.pri  os-other.pro  os-win10.pro  platform-dataquay.pri  (+30 more)
.github/: FUNDING.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
audioio/: AudioCallbackPlaySource.cpp  AudioCallbackPlaySource.h  AudioCallbackPlayTarget.cpp  AudioCallbackPlayTarget.h  AudioCoreAudioTarget.cpp  AudioCoreAudioTarget.h  AudioGenerator.cpp  AudioGenerator.h  AudioJACKTarget.cpp  AudioJACKTarget.h  AudioPortAudioTarget.cpp  AudioPortAudioTarget.h  AudioTargetFactory.cpp  AudioTargetFactory.h  IntegerTimeStretcher.cpp  IntegerTimeStretcher.h  PhaseVocoderTimeStretcher.cpp  PhaseVocoderTimeStretcher.h  PlaySpeedRangeMapper.cpp  PlaySpeedRangeMapper.h
deploy/: clean-build-and-package  clean-build-and-package.bat  metadata.sh
deploy/cross/: macos-arm64.txt  macos-x86_64.txt
deploy/linux/: AppRun  bintray.json  build-and-test-appimage.sh  build-and-test-deb.sh  control.example  debian-dependencies.sh  deploy-appimage.sh  deploy-deb.sh  fix-lintian-bits.sh
deploy/linux/deb-skeleton/DEBIAN/: control
deploy/linux/deb-skeleton/usr/share/doc/sonic-visualiser/: README  copyright
deploy/linux/doc/sonic-visualiser/: copyright
deploy/linux/docker/: Dockerfile.ubuntu1604  Dockerfile_appimage.in  Dockerfile_appimage_tip  Dockerfile_deb.in  Dockerfile_test_appimage.in  Dockerfile_test_deb.in  Dockerfile_v3.0.1_ubuntu1604  Dockerfile_v3.0.2_ubuntu1604  Dockerfile_v3.0.3_ubuntu1604  Dockerfile_v3.0_ubuntu1604  Dockerfile_v3.0beta1_fedora25  Dockerfile_v3.0beta1_ubuntu1604  Dockerfile_v3.0beta2_ubuntu1604  Dockerfile_v3.0beta3_ubuntu1604  Dockerfile_v3.0beta4_ubuntu1604  Dockerfile_v3.1_ubuntu1604  build.sh
deploy/macos/: Entitlements.plist  copy-qt.sh  deploy-and-package.sh  deploy.sh  notarize.sh  paths.sh  sign.sh
deploy/osx/: Entitlements-helpers.plist  Entitlements.plist  HelperEntitlements.plist  Info-helpers.plist  Info.plist  Info.plist.2  build-and-package.sh  copy-qt.sh  cross_amd64.txt  deploy-and-package.sh  deploy-and-run.sh  deploy.sh  notarize.sh  paths.sh  sign.sh
deploy/src/: archive-tip.sh  archive.sh
deploy/win32/: README-Vamp.txt  build-32.bat  build.cmd  generate-wxs.ps1  sonic-visualiser.wxs  sonic-visualiser.wxs.in
deploy/win64/: License.rtf  README-Vamp.txt  README-Vamp32.txt  build-32.bat  build-64-debug.bat  build-64.bat  build-and-package.bat  build.cmd  complete-build.bat  generate-wxs.ps1  sonic-visualiser.wxs  sonic-visualiser.wxs.in  store-notes.txt
document/: Document.cpp  Document.h  SVFileReader.cpp  SVFileReader.h
export-tests/: all.sv  test-layer-exports.sh  test-scripted-generation.sh  test-session-export.sh
export-tests/layers-expected/: 3dplot.csv  3dplot.svl  boxes.csv  instants.csv  instants.svl  notes.csv  notes.svl  peakfreq.csv  peakfreq.svl  regions.csv  regions.svl  selected-3dplot.csv  selected-instants.csv  selected-notes.csv  selected-notes.mid  selected-peakfreq.csv  selected-spectrogram.csv  selected-values.csv  selected-zoomed-3dplot.csv  spectrogram.csv  spectrogram.svl  values.csv  values.svl
i18n/: sonic-visualiser_cs_CZ.qm  sonic-visualiser_cs_CZ.ts  sonic-visualiser_en_GB.qm  sonic-visualiser_en_GB.ts  sonic-visualiser_en_US.qm  sonic-visualiser_en_US.ts  sonic-visualiser_ru.qm  sonic-visualiser_ru.ts  tips_en.txt  tips_en.xml
i18n/cs.lproj/: InfoPlist.strings
i18n/en.lproj/: InfoPlist.strings
i18n/ru.lproj/: InfoPlist.strings
icons/: README  measure1cursor.xbm  measure1mask.xbm  measure2cursor.xbm  measure2mask.xbm  sv-macicon.icns  sv.rc
main/: IMAFencoder.c  IMAFencoder.h  MainWindow.cpp  MainWindow.h  MainWindowBase.cpp  MainWindowBase.h  NetworkPermissionTester.cpp  NetworkPermissionTester.h  OSCHandler.cpp  PreferencesDialog.cpp  PreferencesDialog.h  SVSplash.cpp  SVSplash.h  Surveyer.cpp  Surveyer.h  checkbox.h  imafdecoder.cpp  main.cpp  systeminit.cpp
misc/: debian-dependencies.sh  ladspa.cat  run-clang-tidy.sh  superconfigure  test-session-export.sh  update-i18n.sh
osc/: OSCMessage.cpp  OSCMessage.h  OSCQueue.cpp  OSCQueue.h  demoscript.sh  sv-command  sv-osc-send.c
osx/: Info.plist  svitunes.h  svitunes.mm
samples/: README
templates/: Scrolling Waveforms.svt  Spectrograms.svt  Waveform and Melodic Range Spectrogram.svt  default.svt  default.xml  testtemplate.xml  tk.svt
test/: all-3.2.1.sv  all.sv  test-layer-exports.sh  test-session-export.sh
test/layers-expected/: 3dplot.csv  boxes.svl  image.csv  image.svl  instants.svl  notes.mid  notes.svl  peakfreq.csv  regions.svl  selected-3dplot.csv  selected-boxes.csv  selected-peakfreq.csv  selected-regions.csv  selected-spectrogram.csv  selected-zoomed-3dplot.csv  spectrogram.csv  text.csv  text.svl
transform/: FeatureExtractionPluginTransform.cpp  FeatureExtractionPluginTransform.h  PluginTransform.cpp  PluginTransform.h  RealTimePluginTransform.cpp  RealTimePluginTransform.h  Transform.cpp  Transform.h  TransformFactory.cpp  TransformFactory.h
